# reels-be

./: .dockerignore  .env.example  .env.railway  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.json  sources.config.json  verify_setup.sh  x_accounts.config.json
app/: auth.py  config.py  db.py  deps.py  main.py  models.py  ratelimit.py  scheduler.py  schemas.py
app/ingest/: categorize.py  classify.py  dedupe.py  enrich.py  link.py  rss_scanner.py  scraper.py  sources.py  x_accounts.py  x_sync.py
app/llm/: anthropic.py  azure_function.py  azure_openai.py  base.py  factory.py  ollama.py  openai.py  prompts.py
app/routers/: auth.py  feed.py  sources.py
docs/: azure-deployment.md
docs/superpowers/plans/: 2026-07-03-reels-be-fe-split.md
docs/superpowers/specs/: 2026-07-03-reels-be-fe-split-design.md
tests/: conftest.py  test_admin.py  test_auth_sso.py  test_azure_function.py  test_azure_openai.py  test_categorize.py  test_csi.py  test_feed_engagement.py  test_feed_get.py  test_feed_submit.py  test_health.py  test_ingest_utils.py  test_link.py  test_llm_factory.py  test_models.py  test_prompts.py  test_rss_scanner.py  test_scan_route.py  test_scraper.py  test_sources.py  test_x_accounts.py  test_x_sync.py
