[project]
name = "reels-be"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "pydantic-settings>=2.2",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "feedparser>=6.0",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
